update index with new text

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,8 +58,8 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm Andri</span>
-                  <span>Operations Manager</span>
-                  <span>Working as a Freelancer</span>
+                  <span>learning to code with Python</span>
+                  <span>while raising some kids on the side</span>
                 </span>
                 <span id="typed"></span>
               </h1>
